; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_merge.c_iterator_given_or_empty.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_merge.c_iterator_given_or_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@GIT_ITERATOR_OPTIONS_INIT = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@GIT_ITERATOR_DONT_IGNORE_CASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32**, i32*)* @iterator_given_or_empty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @iterator_given_or_empty(i32** %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_4__, align 4
  store i32** %0, i32*** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = bitcast %struct.TYPE_4__* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 bitcast (%struct.TYPE_4__* @GIT_ITERATOR_OPTIONS_INIT to i8*), i64 4, i1 false)
  %8 = load i32*, i32** %5, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32*, i32** %5, align 8
  store i32* %11, i32** %3, align 8
  br label %22

12:                                               ; preds = %2
  %13 = load i32, i32* @GIT_ITERATOR_DONT_IGNORE_CASE, align 4
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  store i32 %13, i32* %14, align 4
  %15 = load i32**, i32*** %4, align 8
  %16 = call i64 @git_iterator_for_nothing(i32** %15, %struct.TYPE_4__* %6)
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  store i32* null, i32** %3, align 8
  br label %22

19:                                               ; preds = %12
  %20 = load i32**, i32*** %4, align 8
  %21 = load i32*, i32** %20, align 8
  store i32* %21, i32** %3, align 8
  br label %22

22:                                               ; preds = %19, %18, %10
  %23 = load i32*, i32** %3, align 8
  ret i32* %23
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @git_iterator_for_nothing(i32**, %struct.TYPE_4__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
